# pip-poetry-migration

./: .mypy.ini  Makefile  README.md  migrate.py  mypy.ini  pyproject.toml
