[tool.poetry]
name = "poetry_migration"
version = "0.1.0"
description = ""
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
click = "^8.0.3"
requirements-parser = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pdbpp = "^0.10.2"
ipython = "^7.31.1"
mypy = "^0.931"
isort = "^5.10.1"
types-toml = "^0.10.3"
autoflake = "^1.4"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
