[tool.poetry]
name = "poetry_migration"
version = "0.1.0"
description = ""
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
click = "^8.1.7"
requirements-parser = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^23.12"
pdbpp = "^0.10.3"
ipython = "^8.12.3"
mypy = "^1.8"
isort = "^5.13.2"
types-toml = "^0.10.8"
autoflake = "^2.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
